--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile 'com.google.http-client:google-http-client:1.19.0'
     compile 'com.fasterxml.jackson.core:jackson-core:2.5.1'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.1'
+    compile 'com.google.protobuf:protobuf-java:2.2.0'
 
     compile name: 'androidmarketapi-0.6'
 }
