--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 apply plugin: 'java'
+apply plugin: 'application'
 
 sourceCompatibility = 1.5
 version = '1.3.0'
+mainClassName='org.linuxguy.MarketBot.MarketBot'
 
 repositories {
     mavenCentral()
@@ -31,7 +33,8 @@ jar {
     }
 
     manifest {
-        attributes 'Implementation-Title': 'MarketBot',
+        attributes 'Main-Class': 'org.linuxguy.MarketBot.MarketBot',
+                   'Implementation-Title': 'MarketBot',
                    'Implementation-Version': version
     }
 }
