--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.7
+targetCompatibility = 1.8
 version = '1.3.0'
 mainClassName='org.linuxguy.MarketBot.MarketBot'
 
