--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 
 dependencies {
     compile 'com.google.http-client:google-http-client:1.19.0'
+    compile 'com.squareup.okhttp:okhttp:2.2.0'
     compile 'com.fasterxml.jackson.core:jackson-core:2.5.1'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.1'
     compile 'com.google.protobuf:protobuf-java:2.2.0'
